go swagger for the existed 6 APIs
